# poker-eval

./: .cvsignore  ChangeLog  GPLv3-assent.txt  LICENSE  LICENSE.getopt  LICENSE.junit  LICENSE.oro  Makefile  Makefile.am  Makefile.in  NEWS  RELEASE.old  WHATS-HERE.Java  aclocal.m4  config.status  configure  configure.ac  libtool  make_master.sh  mktab_astud.vcproj  mktab_basic.vcproj  mktab_evx.vcproj  mktab_joker.vcproj  mktab_lowball.vcproj  mktab_packed.vcproj  poker-eval.pc  poker-eval.sln  poker-eval.spec  poker-eval.vcproj
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
csharp/: API.cs  Enum.cs  EnumResult.cs  GameParams.cs  Makefile  StdDeck.cs  TODO  Test.cs
debian/: changelog  control  copyright  libpoker-eval-dev.docs  libpoker-eval-dev.install  libpoker-eval.install  rules  source.lintian-overrides
examples/: .cvsignore  Makefile  Makefile.am  Makefile.in  eval.c  eval.vcproj  fish.c  fish.vcproj  five_card_hands.c  five_card_hands.vcproj  getopt_w32.c  getopt_w32.h  hcmp2.c  hcmp2.vcproj  hcmpn.c  hcmpn2.vcproj  pokenum.c  pokenum.vcproj  saie  seven_card_hands.c  seven_card_hands.vcproj  usedecks.c  usedecks.vcproj  utest1
examples/.deps/: eval-eval.Po  fish-fish.Po  five_card_hands-five_card_hands.Po  hcmp2-hcmp2.Po  hcmpn-hcmpn.Po  pokenum-pokenum.Po  seven_card_hands-seven_card_hands.Po  usedecks-usedecks.Po
include/: Makefile  Makefile.am  Makefile.in  combinations.h  config.h  config.h.in  deck.h  deck_astud.h  deck_joker.h  deck_std.h  deck_undef.h  enumdefs.h  enumerate.h  enumord.h  evx_defs.h  game_astud.h  game_joker.h  game_std.h  handval.h  handval_low.h  md5c.h  poker_config.h  poker_config.h.in  poker_defs.h  poker_wrapper.h  pokereval_export.h  rules_astud.h  rules_joker.h  rules_std.h  rules_undef.h  stamp-h2
include/inlines/: eval.h  eval_astud.h  eval_joker.h  eval_joker_low.h  eval_joker_low8.h  eval_low.h  eval_low27.h  eval_low8.h  eval_omaha.h  eval_type.h  evx5.h  evx7.h  evx_action.h  evx_inlines.h
java/: .cvsignore  Makefile.dos  Makefile.in  jniutil.c  jniutil.h  pokutil.c  pokutil.h  sample1.hho
java/org/pokersource/: AllTests.java
java/org/pokersource/enumerate/: BaseHandGroup.java  BeliefVector.java  Enumerate.java  EnumerateImp.c  HandGroup.java  HandMatchup.java  HandValuation.java  HoldemAbdulGroup.java  HoldemAtomicGroup.java  HoldemBeliefVector.java  HoldemCanonGroup.java  HoldemHandGroup.java  HoldemHandGroupFactory.java  HoldemHandOrdering.java  HoldemSMGroup.java  HoldemThresholdGroup.java  HoldemUniversalGroup.java  MatchupOutcome.java  RankOrdering.java  SAIE.java  SAIEMain.java  ThresholdHandGroup.java
java/org/pokersource/enumerate/test/: AllTests.java  EnumerateTest.java  HandMatchupTest.java  HandValuationTest.java  HoldemAbdulGroupTest.java  HoldemAtomicGroupTest.java  HoldemBeliefVectorTest.java  HoldemCanonGroupTest.java  HoldemHandGroupFactoryTest.java  HoldemHandOrderingTest.java  HoldemSMGroupTest.java  HoldemThresholdGroupTest.java  HoldemUniversalGroupTest.java  SAIETest.java
java/org/pokersource/eval/: AsianStudEval.java  AsianStudEvalImp.c  JokerEval.java  JokerEvalImp.c  StandardEval.java  StandardEvalImp.c
java/org/pokersource/eval/test/: AllTests.java  AsianStudEvalTest.java  JokerEvalTest.java  StandardEvalTest.java
java/org/pokersource/game/: Deck.java
java/org/pokersource/game/test/: AllTests.java  DeckTest.java
java/org/pokersource/util/: IntArray.java  LongArray.java  NestedLoopEnumeration.java  NestedLoopSampling.java  ValueSortedMap.java  package.html
java/org/pokersource/util/test/: AllTests.java  IntArrayTest.java  LongArrayTest.java  NestedLoopEnumerationTest.java  ValueSortedMapTest.java
lib/: .cvsignore  Makefile  Makefile.am  Makefile.in  combinations.c  deck.c  deck_astud.c  deck_joker.c  deck_std.c  enumerate.c  enumord.c  evx.c  evx_generate.c  evx_preamble.cfrag  lowball.c  mktab_astud.c  mktab_basic.c  mktab_evx.c  mktab_joker.c  mktab_lowball.c  mktab_packed.c  mktable.c  mktable.h  mktable_utils.c  poker_wrapper.c  rules_astud.c  rules_joker.c  rules_std.c
lib/.deps/: evx_gen5-evx_generate.Po  evx_gen7-evx_generate.Po  libpoker_eval_la-combinations.Plo  libpoker_eval_la-deck.Plo  libpoker_eval_la-deck_astud.Plo  libpoker_eval_la-deck_joker.Plo  libpoker_eval_la-deck_std.Plo  libpoker_eval_la-enumerate.Plo  libpoker_eval_la-enumord.Plo  libpoker_eval_la-evx.Plo  libpoker_eval_la-lowball.Plo  libpoker_eval_la-poker_wrapper.Plo  libpoker_eval_la-rules_astud.Plo  libpoker_eval_la-rules_joker.Plo  libpoker_eval_la-rules_std.Plo  libpoker_eval_la-t_astudcardmasks.Plo  libpoker_eval_la-t_botcard.Plo  libpoker_eval_la-t_botfivecards.Plo  libpoker_eval_la-t_botfivecardsj.Plo  libpoker_eval_la-t_cardmasks.Plo  libpoker_eval_la-t_evx_flushcards.Plo  libpoker_eval_la-t_evx_pairval.Plo  libpoker_eval_la-t_evx_strval.Plo  libpoker_eval_la-t_evx_tripsval.Plo  libpoker_eval_la-t_jokercardmasks.Plo  libpoker_eval_la-t_jokerstraight.Plo  libpoker_eval_la-t_maskrank.Plo  libpoker_eval_la-t_nbits.Plo  libpoker_eval_la-t_nbitsandstr.Plo  libpoker_eval_la-t_straight.Plo  libpoker_eval_la-t_topbit.Plo  libpoker_eval_la-t_topcard.Plo  libpoker_eval_la-t_topfivebits.Plo  libpoker_eval_la-t_topfivecards.Plo  libpoker_eval_la-t_toptwobits.Plo  mktab_astud.Po  mktab_basic.Po  mktab_evx.Po  mktab_joker.Po  mktab_lowball.Po  (+3 more)
tests/: .cvsignore  Makefile  Makefile.am  Makefile.in  bug1823  digtest5.c  digtest7.c  enumtest1.c  enumtest2.c  enumtest3.c  enumtest5.c  enumtest7.c  joktest1.c  poker_wrapper.c  razz.c  run  run.in
tests/.deps/: enumtest1-enumtest1.Po  enumtest2-enumtest2.Po  enumtest3-enumtest3.Po  enumtest5-enumtest5.Po  enumtest7-enumtest7.Po  joktest1-joktest1.Po  poker_wrapper-poker_wrapper.Po
