#
# Copyright (C) 2004-2006 Mekensleep
#
# Mekensleep <licensing@mekensleep.com>
# 24 rue vieille du temple, 75004 Paris
#
# This program gives you software freedom; you can copy, convey,
# propagate, redistribute and/or modify this program under the terms of
# the GNU General Public License (GPL) as published by the Free Software
# Foundation (FSF), either version 3 of the License, or (at your option)
# any later version of the GPL published by the FSF.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program in a file in the toplevel directory called "GPLv3".
# If not, see <http://www.gnu.org/licenses/>.
#
# Authors:
#  Loic Dachary <loic@dachary.org>
#
# 
MAINTAINERCLEANFILES = Makefile.in config.h poker_config.h

EXTRA_DIST = poker_config.h.in config.h.in

nobase_pkginclude_HEADERS = \
	combinations.h \
	deck.h \
	deck_astud.h \
	deck_joker.h \
	deck_std.h \
	deck_undef.h \
	enumdefs.h \
	enumerate.h \
	enumord.h \
	evx_defs.h \
	game_astud.h \
	game_joker.h \
	game_std.h \
	handval.h \
	handval_low.h \
	inlines/eval.h \
	inlines/eval_astud.h \
	inlines/eval_joker.h \
	inlines/eval_joker_low.h \
	inlines/eval_joker_low8.h \
	inlines/eval_low.h \
	inlines/eval_low8.h \
	inlines/eval_low27.h \
	inlines/eval_omaha.h \
	inlines/eval_type.h \
	inlines/evx5.h \
	inlines/evx7.h \
	inlines/evx_action.h \
	inlines/evx_inlines.h \
	poker_config.h \
	poker_defs.h \
	pokereval_export.h \
	rules_astud.h \
	rules_joker.h \
	rules_std.h \
	rules_undef.h \
	poker_wrapper.h
